RENDEZVOUS-52 : debug update state

--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/notifyreminder/task_notifyreminder_config.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/notifyreminder/task_notifyreminder_config.html
@@ -1,6 +1,6 @@
 <#include "/admin/util/editor/editor.html" />
 <fieldset>
-<legend> #i18n{module.workflow.helpfilling.task_help_filling_config.title}</legend>
+<legend> #i18n{genericalert.task_notify_reminder.title}</legend>
 <@messages infos=infos errors=errors/>
 <#if config?exists>
 	<#assign listSize = config.nbAlerts!>
