--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/notifyreminder/task_notifyreminder_config.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/notifyreminder/task_notifyreminder_config.html
@@ -55,7 +55,7 @@
 					<div class="form-group">
 						<label class="col-xs-12 col-sm-12 col-md-3 col-lg-3 control-label" for="email_${i}">   #i18n{genericalert.task_notify_reminder.labelTextEmailAlert} :</label>
 						<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-							<input type="checkbox" name="emailNotify_${i}" value="true" class="form-control"  onchange="showEmail(${i})" id="email_${i}" <#if emailChecked> checked="checked"</#if>/>
+							<input type="checkbox" name="emailNotify_${i}" value="true"   onchange="showEmail(${i})" id="email_${i}" <#if emailChecked> checked="checked"</#if>/>
 						</div>
 						
 					</div>
@@ -63,7 +63,7 @@
 					<div class="form-group">
 						<label class="col-xs-12 col-sm-12 col-md-3 col-lg-3 control-label" for="sms_${i}"> #i18n{genericalert.task_notify_reminder.labelTextSmsAlert} :</label>
 						<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-							<input type="checkbox" name="smsNotify_${i}" value="true" class="form-control" onchange="showSms(${i})" id="sms_${i}" <#if smsChecked> checked="checked"</#if>/>
+							<input type="checkbox" name="smsNotify_${i}" value="true"  onchange="showSms(${i})" id="sms_${i}" <#if smsChecked> checked="checked"</#if>/>
 						</div>
 					</div>		
 					<div class="form-group">
